--- a/06-Conclusion_discussions.Rmd
+++ b/06-Conclusion_discussions.Rmd
@@ -2,72 +2,99 @@
 
 ## Summary
 
-This thesis set out to investigate the role of selection in Polynesian populations and the effects on urate and metabolic disease. There were three main objectives that were covered. In chapter 3, the focus was on identifying regions of the genome in Polynesian populations that exhibited 'signals of selection' and if any of these regions had previously been associated with urate and metabolic disease. 
-
-Regions that had evidence of possible selection were included calcium channels, which were involved in cardiac and cell signalling functions, both of which are likely to have selective pressure acting on them.
-
-The loci that were associated with urate that exhibited evidence of possible selection were primarily not urate transporters but loci that were associated with multiple metabolic diseases.
-
-The urate transporters that did show signs of selection, had weak evidence and only in a single sample Polynesian population that was enriched for gout 10-fold higher than the general population it was representing.
+This thesis set out to investigate the role of selection in Polynesian populations and the effects on urate and metabolic disease. There were three main objectives that were covered. 
 
 
-
-- there was limited evidence of selection in metabolic disease
-- For gout there was limited evidence of selection, where there was it was not in the main effect loci for gout (slc2a9/abgc2) or the urate transporters, except TON where it is possible it's due to the high gout proportion
-- diabetes
-- obesity
-- metabolic syndrome
-- kidney disease
+<!-- Chapter \@ref(selectionResults): "Positive Selection in Polynesian Populations" aims to discover and characterise regions that have undergone selection in Polynesian populations. The specific aims for this chapter were:  -->
+<!-- - Investigate regions that are under selection in the Polynesian populations -->
+<!-- - Investigate regions previously associated with urate, \gls{t2d}, obesity, kidney disease, and metabolic syndrome for signatures of selection -->
 
 
+In chapter 3, the focus was on identifying regions of the genome in Polynesian populations that exhibited 'signals of selection' and if any of these regions had previously been associated with urate and metabolic disease. 
+
+Regions that displayed evidence of possible selection with the loci in the enriched pathways included calcium channels, which were involved in cardiac and cell signalling functions, both of which are likely to have selective pressure acting on them.
+
+The loci that were associated with urate that exhibited evidence of possible selection were primarily not urate transporters but loci that were associated with multiple metabolic diseases. The urate transporters that did show signs of selection, had weak evidence and only in a single sample Polynesian population that was enriched for gout 10-fold higher than the general population it was representing.
+
+The other metabolic diseases of obesity, \gls{t2d}, kidney disease, and metabolic syndrome all had a number of associated loci that also had evidence of possible selection. Some of these loci were associated with multiple traits, and also had an immunicological function. This points to a potential relationship of these loci being influenced by pathogenic challenge, and as a result also influence the metabolic diseases. One example of this potential relationship could be loci that were associated with obesity and \gls{t2d}, that were also associated with malarial infection. One of the genes that was associated with malaria had  with one of the stongest \gls{ihs} signals 
+
+Possible evidence of selection at malaria associated loci. There is possible evidence of the Lapita people having malaria in skeletal remains [@Buckley].
+
+
+There was no evidence, for or against, _CREBRF_ or _PARGC1A_ to be able to determine if there had been selection at these loci, and therefore no conclusions about these loci as 'thrifty genes' was able to be made.
+
+<!-- - there was limited evidence of selection in metabolic disease -->
+<!-- - For gout there was limited evidence of selection, where there was it was not in the main effect loci for gout (slc2a9/abgc2) or the urate transporters, except TON where it is possible it's due to the high gout proportion -->
+<!-- - diabetes -->
+<!-- - obesity -->
+<!-- - metabolic syndrome -->
+<!-- - kidney disease -->
+
+<!-- Chapter \@ref(clustering): "Clustering of Selection Statistics" aims to investigate potential shared ancestry regions that are relevant to urate and metabolic disease. The aims for this chapter were: -->
+<!-- - Determine if neutrality and selection tests can be used to group populations. -->
+<!-- - Investigate genetic loci associated with gout, urate, \gls{t2d}, obesity, kidney disease, and metabolic syndrome and their potential shared selective histories. -->
 
 Chapter 4 was an investigation into the genetic similarities of populations. This chapter added to the evidence that the Polynesian populations had similarities to modern day East Asian populations, and from the migration and settlement histories have a shared ancestry. There was also evidence from all of the clustering methodologies that while the Polynesian populations were most similar to each other in a global context, there was in fact genetic differences between the East and West Polynesian populations.
 
 The selection and neutrality statistics showed that populations within a super population were most similar to one another, with the greatest differences being between super populations. There was also evidence of a shared ancestry in both the frequency spectrum of variants, as well as with haplotypes that was consistent with the Out of Africa migration and subsequent population movements. There was not however a specific signal for selection that appeared in the Polynesian populations for urate or any of the metabolic disease associated loci, but instead a commonality between the frequency spectrum of similar geographic populations. 
 
-The extremes of the frequency based selection and neutrality statistics showed that there was similarity in the regions of the genome within a super population, but the regions that were in the extremes differed between super populations.
+The extremes of the frequency based selection and neutrality statistics showed that there was similarity in the regions of the genome within a super population, but the regions that were in the extremes differed between super populations. This suggested that 
 
 
-- The populations had similar statistic values within a super population but super populations were different
-- The polynesians were most closely related to EAS.
-- The east and west were most similar but also different
+
+
+<!-- Chapter \@ref(selGwas): "Selection and Association Studies" aims to investigate the use of gout definition in genetic association studies, and the combination of selection statistics with \gls{gwas}. The specific aims for this chapter were: -->
+<!-- - Test performance of gout definitions on \gls{gwas} -->
+<!-- - Investigate the use of selection statistics in conjunction with \gls{gwas} -->
 
 
 Chapter 5 investigated the use of gout definition that was common amungst multi-purpose cohorts and assessed the performance of multiple definitions. It was found that the best definition was that of self-reported gout or self-report of \gls{ult} usage, when the \gls{acr} criteria or observation of urate crystals in the synovial fluid is not available. The use of selection statistics in prioritisation of \gls{gwas} loci revealed that there were several loci that had possible evidence of selection that were "in the noise" of the \gls{gwas} signal, however, these loci were limited to previously identified regions.
 
 
 
-The combination of \gls{gwas} results for the haplotypic selection results 
-
-
-Overall
 
 
 
-summary of regions that were selected
+Overall, it was shown that there was evidence suggesting positive selection in Polynesian populations. There was also evidence suggesting that loci associated with urate and metabolic diseases had undergone selection. It was also shown that the Polynesian populations were most similar to modern day East Asian populations.
 
-was gout/urate and other diseases under selection?
+A possible mechanism for the selection on metabolic disease loci is through the innate immune system, given there was overlap with loci exhibiting selection signals, association with malarial resistance, and association with metabolic disease.
+
+<!-- summary of regions that were selected -->
+
+<!-- was gout/urate and other diseases under selection? -->
+
+<!-- need to bring in selection plus disease -->
+
+<!-- - evidence of possbile selectoin across multiple loci associated with urate + MS -->
+<!-- - but there was a lack of 'unified' signal for a particular trait -->
+<!-- - consistent with other studies where for complex traits you don't need all loci to be selected -->
+<!-- - the loci that did show signals also associated with multiple traits -->
+<!-- - werent' specific to a praticular disease and many did also have associations with the immune system -->
+<!-- - potential for a selective pressure to have come via immune system possibly even malaria -->
 
 
 ## Study limitations
 
-One of the biggest limiting factors for this research project was that it used \gls{snp} array data. Ideally whole genome sequencing would have been used, however, Polynesian populations are largely under-represented in large sequencing projects. Using \gls{snp} array data impacted on all aspects of the selection statistics analysis. The marker density of the \gls{snp} array meant that the windowed statistics had a small number of markers per window, compared to the HapMap data, and also whole genome sequence data giving the highest density. This meant that the minimum number of markers of four was conveying signal for 100 kb regions of the genome. The data from the CoreExome \gls{snp} array could have been imputed, however, due to the Polynesian haplotypes
+One of the biggest limiting factors for this research project was that it used \gls{snp} array data. Ideally whole genome sequencing would have been used, however, Polynesian populations are largely under-represented in large sequencing projects. Using \gls{snp} array data impacted on all aspects of the selection statistics analysis. The marker density of the \gls{snp} array meant that the windowed statistics had a small number of markers per window, compared to the HapMap data, and also whole genome sequence data giving the highest density. This meant that the minimum number of markers of four was conveying signal for 100 kb regions of the genome. The data from the CoreExome \gls{snp} array could have been imputed, however, due to the Polynesian specific variant, and therefore haplotypes not being present in the reference panel haplotypes, the imputation quality would be affected. The impact of this whoever is unknown, other than the potential for false haplotypes to be introduced. The tradeoff benefit of having an increased density of markers versus the increased incorrect haplotypes has not been quantified, as the specificity of haplotypes in Polynesian populations is unknown.
 
-- chip data
-- imputation
-- phasing
-    - polynesians aren't in the 1kgp reference haplotypes
-- filters
-    - QC filters
-    - HWE
-    - MAF
 
-Another limiting factor for the analyses in chapters 3, 4 and 5, was the focus on only positive selection. 
+A clear demonstration of the benefit of using sequence data over \gls{snp} array data is with the _CREBRF_ variant, where rs373863828 was specific to Polynesian populations [@Minster2016; Krishnan2018]
+
+<!-- - chip data -->
+<!-- - imputation -->
+<!-- - phasing -->
+<!--     - polynesians aren't in the 1kgp reference haplotypes -->
+<!-- - filters -->
+<!--     - QC filters -->
+<!--     - HWE -->
+<!--     - MAF -->
+
+Another limiting factor for the analyses in chapters 3, 4 and 5, was the focus on only positive selection. This focus came from the hypothesis that urate had been beneficial in the past.
   
 - focus on positive selection
--time-frame of the statistics used
+- time-frame of the statistics used
     
-use of the gwas catalog, while extremely useful in terms of automatic defining of gene lists, does have a few drawbacks
+The use of the gwas catalog, while extremely useful in terms of automatic defining of gene lists, did bring with it several drawbacks. By casting a wide net for associations for a trait it lacked may have increased the noise in the selection signals which meant that trends in the loci that showed signs of selection were harder to distinguish.
 
 - there is a potential bias in the genes that are being reported, refer to the large bias in the gwas populations that are used -> heavily favour the europeans
 - genes that are involved might not have been genome-wide significant and therefore get missed
@@ -78,16 +105,20 @@ One of the limitations of using the gwas catalog is for gene associations
 - bias of the populations
 - genes that are involved might not be genome wide significant therefore missed
 
+Using the \gls{gwas} catalog provided a conveinent method to incorporate many of the known genetic associations found from \gls{gwas} into the selection analysis. There were a few effects from this approach that will have influenced the results in the analyses involving the \gls{gwas} catalog derived gene lists. First, is the associations were only for \gls{gwas}, and didn't report on associations that were found in a non-\gls{gwas} setting, such as candidate genes, so some true genetic associations may have been missed. The impact of this is likely to be small on the conclusions, given that one of the trends trying to be identified was a systematic selection signal across pathways (section \@ref(pathEnrich)), and given the number of genes in a pathway that showed signs of selection and the pathway sizes involved, missing a few loci per pathway is unlikely to have made this systematic selection signal appear. Second, there is the fact that a large proportion of the \gls{gwas} that have been done and reported in the \gls{gwas} catalog are for European populations [\@ref], and the focus of this research was in Polynesian populations, so there will be population specific associations that are missed. Again the impact of this is likely to be small.
+
 the time frames for the statistics has a wide range, many of the differences that are being looked at are in the < 10kya time frame, so therefore some of these methods might not be entirely appropriate but also the nature of the chip data means that some of the newer methods aren't necessarily applicable. especially because the chip data is missing the very low frequency variants due to the bias of chip data having both an ascertainment bias
 
-if it isn't selection, then what could explain the differences in the disease affections?
+<!-- if it isn't selection, then what could explain the differences in the disease affections? -->
 
-- bottlenecking
-- migration
-- admixture
-- "drift"
+<!-- - bottlenecking -->
+<!-- - migration -->
+<!-- - admixture -->
+<!-- - "drift" -->
 
-paper about how demography history needs to be taken into account
+paper about how demography history needs to be taken into account, massive influence of demography and can look similar to selection
+
+the distributions because of snp data are not necessarily the same as if sequence had been used, also the way in which different statistics are affected by the allele frequency spectrum
 
 also paper about how talking about selection on pleotropic traits is very difficult
 
@@ -95,6 +126,19 @@ talk about the distributions and that with the new push for sequence data, esp i
 
 ## Future directions
 
+<!-- - use of sequence data -->
+<!-- - use of statistics, such as PBS/SDS that have have a smaller time frame -->
+<!-- - use cross population statistics with gwas -->
+<!-- - use a meta-analysis approach for the selection statistics -->
+<!-- - simulations to work out the best demographic model that applies to the Polynesian populations -->
+
 Future work in this area would include the generation of a high quality set of Polynesian whole genome sequences that could be used to remove the ascertainment bias that the \gls{snp} arrays have. High quality sequences could also be used to supplement the reference haplotype panels that are currently available to include haplotypes that are specific to Polynesian populations which could then be used improved haplotype phasing, and for imputation of Polynesian specific variants.
 
-Further study could also look beyond positive selection and into other selection types such as background selection which has been XXX [\@ref background selection in humans paper].
+If sequence data was available then the use of some of the newer statistics such as population branching statistic [@Yi2010b], singleton density score [@Field2016], and levels of exclusively shared differences [@Librado2018] could be made use of, which are designed for detecting selection on more recent timescales.
+
+Comparing the present day East Asian and Polynesian populations with ancient Polynesian DNA could prove useful in determining areas of the genome that differ, to refine the regions of the genome that have changed since the populations diverged, and subsequent changes in the Polynesian populations. Comparisons with Denisovian and Neanderthal data could also be used to investigate the impact introgression has had on the Polynesian populations, or if regions that showed signs of selection were also similar to regions of introgression.
+
+Investigating the use of selection statistics with \gls{gwas} could still prove fruitful if other statistics and methodologies were incorporated that allowed for cross-populational comparisons, especially in situations where there are differences in the disease prevalence between populations.
+
+Incorporation of expression quantatitive trait loci information could also prove useful to assess if the markers and regions identified in the selection analyses have known impact on gene expression, or are tissue specific.
+
