split blood pressure to be 2 rows

--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -29,14 +29,15 @@
 }
 
 
-\newglossaryentry{daf}{
-  name={DAF},
-  text={derived allele frequency},
-  description={Derived allele frequency}
-}
+\newacronym[description={derived allele frequency}]{daf}{DAF}{derived allele frequency}
 
-\newacronym[description={Change in derived allele frequency}]{ddaf}{$\Delta$DAF}{change in derived allele frequency}
+\newacronym[description={years ago}]{ya}{ya}{years ago}
 
+
+
+\newacronym[description={selection by conditional coalescent tree}]{scct}{SCCT}{selection by conditional coalescent tree}
+\newacronym[description={change in derived allele frequency}]{ddaf}{$\Delta$DAF}{change in derived allele frequency}
+\newacronym[description={composite of selection signals}]{css}{CSS}{composite of selection signals}
 \newacronym[description={American College of Rheumatology}]{acr}{ACR}{American College of Rheumatology}
 \newacronym[description={Akaike information criterion}]{aic}{AIC}{Akaike information criterion}
 \newacronym[description={Wellcome Trust Case-Control Consortium}]{wtccc}{WTCCC}{Wellcome Trust Case-Control Consortium}
@@ -44,54 +45,54 @@
 \newacronym[description={Framingham Heart Study}]{fhs}{FHS}{Framingham Heart Study}
 \newacronym[description={Kyoto Encyclopedia of Genes and Genomics}]{kegg}{KEGG}{Kyoto Encyclopedia of Genes and Genomics}
 
-\newacronym[description={Genetic relationship matrix}]{grm}{GRM}{genetic relationship matrix}
+\newacronym[description={genetic relationship matrix}]{grm}{GRM}{genetic relationship matrix}
 
 \newacronym[description={False discovery rate}]{fdr}{FDR}{false discovery rate}
 
-\newacronym[description={Principal component analysis}]{pca}{PCA}{principal component analysis}
-\newacronym[description={Principal component}, descriptionplural={Principal components}, plural ={PCs}]{pc}{PC}{principal component}
+\newacronym[description={principal component analysis}]{pca}{PCA}{principal component analysis}
+\newacronym[description={principal component}, descriptionplural={Principal components}, plural ={PCs}]{pc}{PC}{principal component}
 
-\newacronym[description={Variant call format}]{vcf}{VCF}{variant call format}
+\newacronym[description={variant call format}]{vcf}{VCF}{variant call format}
 
-\newacronym[description={Kilobases}]{kb}{kb}{kilobases}
+\newacronym[description={kilobases}]{kb}{kb}{kilobases}
 
-\newacronym[description={Hyperuricaemia}]{hu}{HU}{hyperuricaemia}
-\newacronym[description={Body mass index}]{bmi}{BMI}{body mass index}
-\newacronym[description={Cardio vascular disease}]{cvd}{CVD}{cardio vascular disease}
-\newacronym[description={Urate lowering therapy}]{ult}{ULT}{urate lowering therapy}
-\newacronym[description={Linkage disequilibrium}]{ld}{LD}{linkage disequilibrium}
+\newacronym[description={hyperuricaemia}]{hu}{HU}{hyperuricaemia}
+\newacronym[description={body mass index}]{bmi}{BMI}{body mass index}
+\newacronym[description={cardio vascular disease}]{cvd}{CVD}{cardio vascular disease}
+\newacronym[description={urate lowering therapy}]{ult}{ULT}{urate lowering therapy}
+\newacronym[description={linkage disequilibrium}]{ld}{LD}{linkage disequilibrium}
 
 \newacronym[description={1000 Genomes Project}]{1kgp}{1KGP}{1000 Genomes Project}
 
 \newacronym[description={New Zealand}]{nz}{NZ}{New Zealand}
-\newacronym[description={Single nucleotide polymorphism}]{snp}{SNP}{single nucleotide polymorphism}
+\newacronym[description={single nucleotide polymorphism}]{snp}{SNP}{single nucleotide polymorphism}
 %\newacronym[plural={cM}, \glsshortpluralkey={cM}]{cM}{cM}{centiMorgan} 
 
-\newacronym[description={Site frequency spectrum}]{sfs}{SFS}{site frequency spectrum}
+\newacronym[description={site frequency spectrum}]{sfs}{SFS}{site frequency spectrum}
 %\newacronym[description={Cook Island M\={a}ori}]{cim}{CIM}{Cook Island M\={a}ori}
 %\newacronym[description={New Zealand M\={a}ori}]{nzm}{NZM}{New Zealand M\={a}ori}
 %\newacronym[description={Tongan}]{ton}{TON}{Tongan}
 %\newacronym[description={Samoan}]{sam}{SAM}{Samoan}
-\newacronym[description={Genome-wide association study},plural ={GWASes}]{gwas}{GWAS}{genome-wide association study}
-\newacronym[description={Variance genome-wide association scan}]{vgwas}{vGWAS}{variance genome-wide association scan}
-\newacronym[description={Insertion or deletion}]{indel}{INDEL}{insertion or deletion}
+\newacronym[description={genome-wide association study},plural ={GWASes}]{gwas}{GWAS}{genome-wide association study}
+\newacronym[description={variance genome-wide association scan}]{vgwas}{vGWAS}{variance genome-wide association scan}
+\newacronym[description={insertion or deletion}]{indel}{INDEL}{insertion or deletion}
 
 \newacronym[description={Genome Analysis ToolKit}]{gatk}{GATK}{genome analysis toolkit}
 
 \newacronym[description={Hardy-Weinberg equilibrium}]{hwe}{HWE}{Hardy-Weinberg Equilibrium}
-\newacronym[description={Minor allele frequency}]{maf}{MAF}{minor allele frequency}
-\newacronym[description={Cross population extended haplotype homozygosity}]{xpehh}{XP-EHH}{cross population extended haplotype homozygosity}
-\newacronym[description={Composite likelihood ratio}]{clr}{CLR}{composite likelihood ratio}
+\newacronym[description={minor allele frequency}]{maf}{MAF}{minor allele frequency}
+\newacronym[description={cross population extended haplotype homozygosity}]{xpehh}{XP-EHH}{cross population extended haplotype homozygosity}
+\newacronym[description={composite likelihood ratio}]{clr}{CLR}{composite likelihood ratio}
 %\newacronym[description={1000 Genomes Project European Super Population}]{eur}{EUR}{European}
 %\newacronym[description={1000 Genomes Project East Asian Super Population}]{eas}{EAS}{East Asian}
 %\newacronym[description={1000 Genomes Project South Asian Super Population}]{sas}{SAS}{South Asian}
 %\newacronym[description={1000 Genomes Project African Super Population}]{afr}{AFR}{African}
 %\newacronym[description={1000 Genomes Project American Super Population}]{amr}{AMR}{American}
 
-\newacronym[description={Integrated haplotype homozygosity score}]{ihs}{iHS}{integrated haplotype homozygosity score}
-\newacronym[description={Integrated extended haplotype homozygosity}]{ihh}{iHH}{integrated extended haplotype homozygosity}
-\newacronym[description={Extended haplotype homozygosity}]{ehh}{EHH}{extended haplotype homozygosity}
-\newacronym[description={Number of segregating sites by length}]{nsl}{nSL}{number of segregating sites by length}
+\newacronym[description={integrated haplotype homozygosity score}]{ihs}{iHS}{integrated haplotype homozygosity score}
+\newacronym[description={integrated extended haplotype homozygosity}]{ihh}{iHH}{integrated extended haplotype homozygosity}
+\newacronym[description={extended haplotype homozygosity}]{ehh}{EHH}{extended haplotype homozygosity}
+\newacronym[description={number of segregating sites by length}]{nsl}{nSL}{number of segregating sites by length}
 
 \newacronym[description={Genome-wide Complex Trait Analysis}]{gcta}{GCTA}{Genome-wide Complex Trait Analysis}
 
