--- a/references.bib
+++ b/references.bib
@@ -4426,3 +4426,135 @@ title = {{Fifteen years of genomewide scans for selection: Trends, lessons and u
 volume = {25},
 year = {2016}
 }
+
+@article{Field2016,
+abstract = {The identification of signals of very recent positive selection provides information about the adaptation of modern humans to local conditions. We report here on a genome-wide scan for signals of very recent positive selection in favor of variants that have not yet reached fixation. We describe a new analytical method for scanning single nucleotide polymorphism (SNP) data for signals of recent selection, and apply this to data from the International HapMap Project. In all three continental groups we find widespread signals of recent positive selection. Most signals are region-specific, though a significant excess are shared across groups. Contrary to some earlier low resolution studies that suggested a paucity of recent selection in sub-Saharan Africans, we find that by some measures our strongest signals of selection are from the Yoruba population. Finally, since these signals indicate the existence of genetic variants that have substantially different fitnesses, they must indicate loci that are the source of significant phenotypic variation. Though the relevant phenotypes are generally not known, such loci should be of particular interest in mapping studies of complex traits. For this purpose we have developed a set of SNPs that can be used to tag the strongest approximately 250 signals of recent selection in each population.},
+author = {Field, Yair and Boyle, Evan A and Telis, Natalie and Gao, Ziyue and Gaulton, Kyle J and Golan, David and Yengo, Loic and Rocheleau, Ghislain and Froguel, Philippe and McCarthy, Mark I. and Pritchard, Jonathan K.},
+doi = {10.1126/science.aag0776},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Field et al. - 2016 - Detection of human adaptation during the past 2000 years.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Field et al. - 2016 - Detection of human adaptation during the past 2000 years(2).pdf:pdf;:home/murraycadzow/Dropbox/Papers/science.aag0776.full.pdf:pdf},
+isbn = {1545-7885 (Electronic) 1544-9173 (Linking)},
+issn = {0036-8075},
+journal = {Science},
+month = {nov},
+number = {6313},
+pages = {760--764},
+pmid = {16494531},
+title = {{Detection of human adaptation during the past 2000 years}},
+url = {http://www.sciencemag.org/lookup/doi/10.1126/science.aag0776},
+volume = {354},
+year = {2016}
+}
+
+
+@article{Librado2018,
+abstract = {Identifying the genomic basis underlying local adaptation is paramount to evolutionary biology, and bears many applications in the fields of conservation biology, crop and animal breeding, as well as personalized medicine. While many approaches have been developed to detect signatures of positive selection within single populations and population pairs, the increasing wealth of high-throughput sequencing data requires improved methods capable of handling multiple, and ideally large number of, populations in a single analysis. In this study, we introduce LSD (Levels of exclusively Shared Differences), a fast and flexible framework to perform genome-wide selection scans, along the internal and external branches of a given population tree. We use forward simulations to demonstrate that LSD can identify branches targeted by positive selection with remarkable sensitivity and specificity. We illustrate a range of potential applications by analyzing data from the 1000 Genomes Project and uncover a list of adaptive candidates accompanying the expansion of anatomically modern humans (AMH) out-of-Africa and their spread to Europe.},
+author = {Librado, Pablo and Orlando, Ludovic},
+doi = {10.1093/molbev/msy053},
+file = {:home/murraycadzow/Dropbox/Papers/msy053.pdf:pdf},
+issn = {0737-4038},
+journal = {Molecular Biology and Evolution},
+keywords = {ancient selection,population tree,positive selection},
+number = {6},
+pages = {1520--1535},
+title = {{Detecting signatures of positive selection along defined branches of a population tree using LSD}},
+url = {https://academic.oup.com/mbe/advance-article/doi/10.1093/molbev/msy053/4956645},
+volume = {35},
+year = {2018}
+}
+
+@article{Aidoo2002,
+abstract = {The high frequency of the sickle-cell haemoglobin (HbS) gene in malaria endemic regions is believed to be due to a heterozygote (HbASp) advantage against fatal malaria. Data to prospectively confirm the protection associated with HbAS against mortality are lacking. We show that HbAS provides significant protection against all-cause mortality, severe malarial anaemia, and high-density parasitaemia. This significant reduction in mortality was detected between the ages of 2 and 16 months, the highest risk period for severe malarial anaemia in this area. These data are important in understanding the role of malaria in the selection and maintenance of the sickle cell gene.},
+author = {Aidoo, Michael and Terlouw, Dianne J and Kolczak, Margarette S and McElroy, Peter D and ter Kuile, Feiko O and Kariuki, Simon and Nahlen, Bernard L and Lal, Altaf A and Udhayakumar, Venkatachalam},
+doi = {10.1016/S0140-6736(02)08273-9},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S0140673602082739-main.pdf:pdf},
+isbn = {0140-6736},
+issn = {01406736},
+journal = {The Lancet},
+number = {9314},
+pages = {1311--1312},
+pmid = {11965279},
+title = {{Protective effects of the sickle cell gene against malaria morbidity and mortality}},
+volume = {359},
+year = {2002}
+}
+
+@article{Benjamini1995,
+author = {Benjamini, Yoav and Hochberg, Yosef},
+file = {:home/murraycadzow/Dropbox/Papers/2346101.pdf:pdf},
+journal = {Journal of the Royal Statistical Society. Series B ( Methodological)},
+number = {1},
+pages = {289--300},
+title = {{Controlling the False Discovery Rate : A Practical and Powerful Approach to Multiple Testing}},
+url = {http://www.jstor.org/stable/2346101},
+volume = {57},
+year = {1995}
+}
+
+@article{Kanehisa2017,
+abstract = {The eukaryotic RNA exosome is an essential, multi-subunit complex that catalyzes RNA turnover, maturation, and quality control processes. Its non-catalytic donut-shaped core includes 9 subunits that associate with the 3' to 5' exoribonucleases Rrp6, and Rrp44/Dis3, a subunit that also catalyzes endoribonuclease activity. Although recent structures and biochemical studies of RNA bound exosomes from S. cerevisiae revealed that the Exo9 central channel guides RNA to either Rrp6 or Rrp44 using partially overlapping and mutually exclusive paths, several issues related to RNA recruitment remain. Here, we identify activities for the highly basic Rrp6 C-terminal tail that we term the 'lasso' because it binds RNA and stimulates ribonuclease activities associated with Rrp44 and Rrp6 within the 11-subunit nuclear exosome. Stimulation is dependent on the Exo9 central channel, and the lasso contributes to degradation and processing activities of exosome substrates in vitro and in vivo. Finally, we present evidence that the Rrp6 lasso may be a conserved feature of the eukaryotic RNA exosome.},
+archivePrefix = {arXiv},
+arxivId = {1611.06654},
+author = {Kanehisa, Minoru and Furumichi, Miho and Tanabe, Mao and Sato, Yoko and Morishima, Kanae},
+doi = {10.1093/nar/gkw1092},
+eprint = {1611.06654},
+file = {:home/murraycadzow/Dropbox/Papers/gkw1092.pdf:pdf},
+isbn = {2076792171},
+issn = {13624962},
+journal = {Nucleic Acids Research},
+number = {D1},
+pages = {D353--D361},
+pmid = {27899565},
+title = {{KEGG: New perspectives on genomes, pathways, diseases and drugs}},
+volume = {45},
+year = {2017}
+}
+
+
+@article{siva2008,
+  title={1000 Genomes project.},
+  author={Siva, N},
+  journal={Nature biotechnology},
+  volume={26},
+  number={3},
+  pages={256},
+  year={2008}
+}
+
+@article{Wollstein2010,
+abstract = {BACKGROUND: The human history of Oceania comprises two extremes: the initial colonizations of Near Oceania, one of the oldest out-of-Africa migrations, and of Remote Oceania, the most recent expansion into unoccupied territories. Genetic studies, mostly using uniparentally inherited DNA, have shed some light on human origins in Oceania, particularly indicating that Polynesians are of mixed East Asian and Near Oceanian ancestry. Here, we use ∼1 million single nucleotide polymorphisms (SNPs) to investigate the demographic history of Oceania in a more detailed manner.
+
+RESULTS: We developed a new approach to account for SNP ascertainment bias, used approximate Bayesian computation simulations to choose the best-fitting model of population history, and estimated demographic parameters. We find that the ancestors of Near Oceanians diverged from ancestral Eurasians ∼27 thousand years ago (kya), suggesting separate initial occupations of both territories. The genetic admixture in Polynesian history between East Asians (∼87{\%}) and Near Oceanians (∼13{\%}) occurred ∼3 kya, prior to the colonization of Polynesia. Fijians are of Polynesian (∼65{\%}) and additional Near Oceanian (∼35{\%}) ancestry not found in Polynesians, with this admixture occurring considerably after the initial settlement of Remote Oceania. Our data support a greater contribution of East Asian women than men in the admixture history of Remote Oceania and highlight population substructure in Polynesia and New Guinea.
+
+CONCLUSIONS: Despite the inherent ascertainment bias, genome-wide SNP data provide new insights into the genetic history of Oceana. Our approach to correct for ascertainment bias and obtain reliable inferences concerning demographic history should prove useful in other such studies.},
+author = {Wollstein, Andreas and Lao, Oscar and Becker, Christian and Brauer, Silke and Trent, Ronald J. and N{\"{u}}rnberg, Peter and Stoneking, Mark and Kayser, Manfred},
+doi = {10.1016/j.cub.2010.10.040},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wollstein et al. - 2010 - Demographic history of Oceania inferred from genome-wide data.pdf:pdf},
+isbn = {0960-9822},
+issn = {1879-0445},
+journal = {Current biology : CB},
+keywords = {Bayes Theorem,Chromosomes,Emigration and Immigration,Genome,Heterozygote,Human,Human: chemistry,Humans,Linkage Disequilibrium,Polymorphism,Polynesia,Population Dynamics,Principal Component Analysis,Single Nucleotide},
+month = {nov},
+number = {22},
+pages = {1983--92},
+pmid = {21074440},
+title = {{Demographic history of Oceania inferred from genome-wide data.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/21074440},
+volume = {20},
+year = {2010}
+}
+
+@article{Matisoo-Smith2018,
+author = {Matisoo-Smith, Elizabeth and Gosling, Anna L},
+doi = {10.1080/03014460.2018.1448889},
+file = {:home/murraycadzow/Dropbox/Papers/Walking backwards into the future the need for a holistic evolutionary approach in Pacific health research.pdf:pdf},
+issn = {0301-4460},
+journal = {Annals of Human Biology},
+month = {apr},
+number = {3},
+pages = {175--187},
+publisher = {Informa UK Ltd.},
+title = {{Walking backwards into the future: the need for a holistic evolutionary approach in Pacific health research}},
+url = {https://doi.org/10.1080/03014460.2018.1448889 https://www.tandfonline.com/doi/full/10.1080/03014460.2018.1448889},
+volume = {45},
+year = {2018}
+}
